# duaLib

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt
src/include/: crc.h  dataStructures.h  definitions.h  duaLib.h  duaLibUtils.hpp  originalLibScePadStructs.h  triggerFactory.h
src/source/: crc.cpp  duaLib.cpp  duaLibUtils.cpp  readDualsense.cpp  readDualshock4.cpp
